--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://afdian.net/@yuzu815']
+custom: ['https://afdian.net/@yuzu815', 'https://github.com/Yuzu815/Codeforces-ContestCodeDownload#-donate']
